@@ -2,6 +2,8 @@
 
 HEAD
 ====
+Enhancements:
+- io: add HX_mkdir2 which can take a mode argument
 
 
 v3.11 (2011-07-25)
